--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
 		"craco": "0.0.3",
 		"craco-less": "^1.18.0",
 		"dayjs": "^1.10.6",
+		"history": "^5.0.0",
 		"jira-dev-tool": "^1.6.59",
 		"less": "^4.1.1",
 		"qs": "^6.10.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-router": "^6.0.0-beta.0",
+		"react-router-dom": "^6.0.0-beta.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.3.2",
 		"web-vitals": "^1.1.2"
@@ -54,6 +57,7 @@
 	},
 	"devDependencies": {
 		"@types/qs": "^6.9.6",
+		"@types/react-router-dom": "^5.1.8",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^6.0.0",
 		"json-server": "^0.16.3",
